Fixed jumping color picker

--- a/javascripts/LeftBar/LeftBar.scss
+++ b/javascripts/LeftBar/LeftBar.scss
@@ -52,4 +52,5 @@
     position: absolute;
     left: 48px;
     z-index: 1;
+    bottom: -18px;
 }
